--- a/workspace/ims-webapp/src/main/resources/reports/jrxml/TA_FORM_TS01_10_1.jrxml
+++ b/workspace/ims-webapp/src/main/resources/reports/jrxml/TA_FORM_TS01_10_1.jrxml
@@ -43,7 +43,7 @@
 			</textField>
 			<textField>
 				<reportElement style="Topic" x="370" y="25" width="90" height="25" uuid="6d1514d6-b255-44a7-b908-8165137638d3"/>
-				<textElement textAlignment="Center" verticalAlignment="Bottom"/>
+				<textElement textAlignment="Right" verticalAlignment="Bottom"/>
 				<textFieldExpression><![CDATA["ตส. ๐๑-๑๐/๑"]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true" isBlankWhenNull="true">
@@ -63,181 +63,181 @@
 					<pen lineWidth="0.5" lineStyle="Dotted"/>
 				</graphicElement>
 			</line>
-			<textField>
+			<textField isBlankWhenNull="true">
 				<reportElement style="TextDetail" x="0" y="60" width="460" height="15" uuid="7a7cbb58-7ce6-423e-91f3-8cd5e251f676"/>
 				<box>
 					<bottomPen lineWidth="0.5" lineStyle="Dotted"/>
 				</box>
 			</textField>
-			<textField>
+			<textField isBlankWhenNull="true">
 				<reportElement style="TextDetail" x="0" y="75" width="460" height="22" uuid="140c0508-53a1-46aa-87f8-1c10b59f29b3"/>
 				<box>
 					<bottomPen lineWidth="0.5" lineStyle="Dotted"/>
 				</box>
 			</textField>
-			<textField>
+			<textField isBlankWhenNull="true">
 				<reportElement style="TextDetail" x="0" y="97" width="460" height="22" uuid="65bf445f-3e7c-481a-897e-14e268035a0a"/>
 				<box>
 					<bottomPen lineWidth="0.5" lineStyle="Dotted"/>
 				</box>
 			</textField>
-			<textField>
+			<textField isBlankWhenNull="true">
 				<reportElement style="TextDetail" x="0" y="119" width="460" height="22" uuid="4fa584cd-5f1f-480e-b8ea-f874279df403"/>
 				<box>
 					<bottomPen lineWidth="0.5" lineStyle="Dotted"/>
 				</box>
 			</textField>
-			<textField>
+			<textField isBlankWhenNull="true">
 				<reportElement style="TextDetail" x="0" y="141" width="460" height="22" uuid="0937f533-df59-4128-8fbf-8e5573025bf5"/>
 				<box>
 					<bottomPen lineWidth="0.5" lineStyle="Dotted"/>
 				</box>
 			</textField>
-			<textField>
+			<textField isBlankWhenNull="true">
 				<reportElement style="TextDetail" x="0" y="163" width="460" height="22" uuid="dc281014-b2f5-4856-a567-e1e45b4c6a22"/>
 				<box>
 					<bottomPen lineWidth="0.5" lineStyle="Dotted"/>
 				</box>
 			</textField>
-			<textField>
+			<textField isBlankWhenNull="true">
 				<reportElement style="TextDetail" x="0" y="185" width="460" height="22" uuid="7d5b3120-e9d5-468a-886b-1df91cf429a8"/>
 				<box>
 					<bottomPen lineWidth="0.5" lineStyle="Dotted"/>
 				</box>
 			</textField>
-			<textField>
+			<textField isBlankWhenNull="true">
 				<reportElement style="TextDetail" x="0" y="207" width="460" height="22" uuid="cac6efa2-9fce-45af-a8bd-faa3748091ca"/>
 				<box>
 					<bottomPen lineWidth="0.5" lineStyle="Dotted"/>
 				</box>
 			</textField>
-			<textField>
+			<textField isBlankWhenNull="true">
 				<reportElement style="TextDetail" x="0" y="229" width="460" height="22" uuid="6b029a3e-2c60-4310-9316-e83f44ea1327"/>
 				<box>
 					<bottomPen lineWidth="0.5" lineStyle="Dotted"/>
 				</box>
 			</textField>
-			<textField>
+			<textField isBlankWhenNull="true">
 				<reportElement style="TextDetail" x="0" y="251" width="460" height="22" uuid="b4a2e2a2-1312-41a0-b251-62b7e0b5a729"/>
 				<box>
 					<bottomPen lineWidth="0.5" lineStyle="Dotted"/>
 				</box>
 			</textField>
-			<textField>
+			<textField isBlankWhenNull="true">
 				<reportElement style="TextDetail" x="0" y="273" width="460" height="22" uuid="e9628634-05d4-4f1d-b63a-032beeb510de"/>
 				<box>
 					<bottomPen lineWidth="0.5" lineStyle="Dotted"/>
 				</box>
 			</textField>
-			<textField>
+			<textField isBlankWhenNull="true">
 				<reportElement style="TextDetail" x="0" y="295" width="460" height="22" uuid="0b38bdcb-f7ae-4225-972a-8a7b9c545716"/>
 				<box>
 					<bottomPen lineWidth="0.5" lineStyle="Dotted"/>
 				</box>
 			</textField>
-			<textField>
+			<textField isBlankWhenNull="true">
 				<reportElement style="TextDetail" x="0" y="317" width="460" height="22" uuid="869509a1-df6a-49ac-95f6-19cf3b94b777"/>
 				<box>
 					<bottomPen lineWidth="0.5" lineStyle="Dotted"/>
 				</box>
 			</textField>
-			<textField>
+			<textField isBlankWhenNull="true">
 				<reportElement style="TextDetail" x="0" y="339" width="460" height="22" uuid="8d9b252e-e472-4f69-acdb-2c087ca9cb46"/>
 				<box>
 					<bottomPen lineWidth="0.5" lineStyle="Dotted"/>
 				</box>
 			</textField>
-			<textField>
+			<textField isBlankWhenNull="true">
 				<reportElement style="TextDetail" x="0" y="361" width="460" height="22" uuid="98ea67a6-1ac6-4975-8cb2-a018861baaa2"/>
 				<box>
 					<bottomPen lineWidth="0.5" lineStyle="Dotted"/>
 				</box>
 			</textField>
-			<textField>
+			<textField isBlankWhenNull="true">
 				<reportElement style="TextDetail" x="0" y="383" width="460" height="22" uuid="75d17b15-252a-4604-84b2-ef089a06fbff"/>
 				<box>
 					<bottomPen lineWidth="0.5" lineStyle="Dotted"/>
 				</box>
 			</textField>
-			<textField>
+			<textField isBlankWhenNull="true">
 				<reportElement style="TextDetail" x="0" y="405" width="460" height="22" uuid="00cb1574-5098-471e-a34d-d91e3fb94966"/>
 				<box>
 					<bottomPen lineWidth="0.5" lineStyle="Dotted"/>
 				</box>
 			</textField>
-			<textField>
+			<textField isBlankWhenNull="true">
 				<reportElement style="TextDetail" x="0" y="427" width="460" height="22" uuid="668f6af7-34b4-4e20-8ab7-c002df3c64aa"/>
 				<box>
 					<bottomPen lineWidth="0.5" lineStyle="Dotted"/>
 				</box>
 			</textField>
-			<textField>
+			<textField isBlankWhenNull="true">
 				<reportElement style="TextDetail" x="0" y="449" width="460" height="22" uuid="8b4a77fe-d895-48b4-8b6c-1855580d0178"/>
 				<box>
 					<bottomPen lineWidth="0.5" lineStyle="Dotted"/>
 				</box>
 			</textField>
-			<textField>
+			<textField isBlankWhenNull="true">
 				<reportElement style="TextDetail" x="0" y="471" width="460" height="22" uuid="22f37d85-0bf7-427e-8461-323161ded060"/>
 				<box>
 					<bottomPen lineWidth="0.5" lineStyle="Dotted"/>
 				</box>
 			</textField>
-			<textField>
+			<textField isBlankWhenNull="true">
 				<reportElement style="TextDetail" x="0" y="493" width="460" height="22" uuid="7e3f8d25-125d-4d2f-93c7-7e82503ff5e2"/>
 				<box>
 					<bottomPen lineWidth="0.5" lineStyle="Dotted"/>
 				</box>
 			</textField>
-			<textField>
+			<textField isBlankWhenNull="true">
 				<reportElement style="TextDetail" x="0" y="515" width="460" height="22" uuid="5f85c9ae-ea82-4a60-9b7a-9dd6996431a5"/>
 				<box>
 					<bottomPen lineWidth="0.5" lineStyle="Dotted"/>
 				</box>
 			</textField>
-			<textField>
+			<textField isBlankWhenNull="true">
 				<reportElement style="TextDetail" x="0" y="537" width="460" height="22" uuid="5fe9f539-718b-45b1-95e2-5a7590172e17"/>
 				<box>
 					<bottomPen lineWidth="0.5" lineStyle="Dotted"/>
 				</box>
 			</textField>
-			<textField>
+			<textField isBlankWhenNull="true">
 				<reportElement style="TextDetail" x="0" y="559" width="460" height="22" uuid="b4f0bbdc-78aa-40ec-a3cf-07fe147e8e5c"/>
 				<box>
 					<bottomPen lineWidth="0.5" lineStyle="Dotted"/>
 				</box>
 			</textField>
-			<textField>
+			<textField isBlankWhenNull="true">
 				<reportElement style="TextDetail" x="0" y="581" width="460" height="22" uuid="c3730797-1410-4f0b-9349-ec9ce6b25828"/>
 				<box>
 					<bottomPen lineWidth="0.5" lineStyle="Dotted"/>
 				</box>
 			</textField>
-			<textField>
+			<textField isBlankWhenNull="true">
 				<reportElement style="TextDetail" x="0" y="603" width="460" height="22" uuid="5fcd9c13-9844-4689-bc6f-7e2d5103d29c"/>
 				<box>
 					<bottomPen lineWidth="0.5" lineStyle="Dotted"/>
 				</box>
 			</textField>
-			<textField>
+			<textField isBlankWhenNull="true">
 				<reportElement style="TextDetail" x="0" y="625" width="460" height="22" uuid="99239213-1184-4269-b128-1a37d70216fc"/>
 				<box>
 					<bottomPen lineWidth="0.5" lineStyle="Dotted"/>
 				</box>
 			</textField>
-			<textField>
+			<textField isBlankWhenNull="true">
 				<reportElement style="TextDetail" x="0" y="647" width="460" height="22" uuid="b0939106-732f-4657-abca-1253f42e4ee7"/>
 				<box>
 					<bottomPen lineWidth="0.5" lineStyle="Dotted"/>
 				</box>
 			</textField>
-			<textField>
+			<textField isBlankWhenNull="true">
 				<reportElement style="TextDetail" x="0" y="669" width="460" height="22" uuid="b06e2349-d20c-476e-a780-295debd11a47"/>
 				<box>
 					<bottomPen lineWidth="0.5" lineStyle="Dotted"/>
 				</box>
 			</textField>
-			<textField>
+			<textField isBlankWhenNull="true">
 				<reportElement style="TextDetail" x="0" y="691" width="460" height="22" uuid="86656c28-8d30-48df-8e9f-8dde4b618f09"/>
 				<box>
 					<bottomPen lineWidth="0.5" lineStyle="Dotted"/>
