--- a/workspace/ims-webapp/src/main/resources/reports/jrxml/TA_FORM_TS01_17_1.jrxml
+++ b/workspace/ims-webapp/src/main/resources/reports/jrxml/TA_FORM_TS01_17_1.jrxml
@@ -372,7 +372,7 @@ new SimpleDateFormat("d/M/yyyy",new Locale("th", "TH")).format($P{auditDateEnd})
 			</textField>
 			<textField>
 				<reportElement style="TextDetail" x="40" y="242" width="185" height="16" uuid="e42f5052-a7e0-44db-9b18-e69fbc075ec6"/>
-				<textElement textAlignment="Left" verticalAlignment="Bottom"/>
+				<textElement textAlignment="Left" verticalAlignment="Top"/>
 				<textFieldExpression><![CDATA["๑. ข้อเท็จจริงและประเด็นที่เป็นเหตุให้ต้องชำระภาษีเพิ่ม"]]></textFieldExpression>
 			</textField>
 			<textField isBlankWhenNull="true">
@@ -405,14 +405,14 @@ new SimpleDateFormat("d/M/yyyy",new Locale("th", "TH")).format($P{auditDateEnd})
 				<textElement textAlignment="Left" verticalAlignment="Bottom"/>
 				<textFieldExpression><![CDATA["ภาษีสรรพสามิต"]]></textFieldExpression>
 			</textField>
-			<textField isStretchWithOverflow="true" isBlankWhenNull="true">
+			<textField isStretchWithOverflow="true" pattern="#,##0.00" isBlankWhenNull="true">
 				<reportElement style="TextDetail" x="320" y="322" width="80" height="16" uuid="392b462c-0c91-445c-b935-0d94ac643c56"/>
 				<textElement textAlignment="Right" verticalAlignment="Bottom"/>
 				<textFieldExpression><![CDATA[$P{taxAmt}]]></textFieldExpression>
 			</textField>
 			<textField>
 				<reportElement style="TextDetail" x="400" y="322" width="25" height="16" uuid="e0b2b7dc-7744-4b51-abdd-6e6978169daf"/>
-				<textElement textAlignment="Left" verticalAlignment="Bottom"/>
+				<textElement textAlignment="Right" verticalAlignment="Bottom"/>
 				<textFieldExpression><![CDATA["บาท"]]></textFieldExpression>
 			</textField>
 			<textField>
@@ -420,14 +420,14 @@ new SimpleDateFormat("d/M/yyyy",new Locale("th", "TH")).format($P{auditDateEnd})
 				<textElement textAlignment="Left" verticalAlignment="Bottom"/>
 				<textFieldExpression><![CDATA["เบี้ยปรับ ตามมาตรา ๑๔๐"]]></textFieldExpression>
 			</textField>
-			<textField isStretchWithOverflow="true" isBlankWhenNull="true">
+			<textField isStretchWithOverflow="true" pattern="#,##0.00" isBlankWhenNull="true">
 				<reportElement style="TextDetail" x="320" y="338" width="80" height="16" uuid="28a861f0-26d6-4049-9bd4-0dc1e272a56a"/>
 				<textElement textAlignment="Right" verticalAlignment="Bottom"/>
 				<textFieldExpression><![CDATA[$P{fineAmt}]]></textFieldExpression>
 			</textField>
 			<textField>
 				<reportElement style="TextDetail" x="400" y="338" width="25" height="16" uuid="574b4b93-dab2-4d77-bfb5-beeccb8bccc5"/>
-				<textElement textAlignment="Left" verticalAlignment="Bottom"/>
+				<textElement textAlignment="Right" verticalAlignment="Bottom"/>
 				<textFieldExpression><![CDATA["บาท"]]></textFieldExpression>
 			</textField>
 			<textField>
@@ -435,14 +435,14 @@ new SimpleDateFormat("d/M/yyyy",new Locale("th", "TH")).format($P{auditDateEnd})
 				<textElement textAlignment="Left" verticalAlignment="Bottom"/>
 				<textFieldExpression><![CDATA["เงินเพิ่ม ตามมาตรา ๑๔๑"]]></textFieldExpression>
 			</textField>
-			<textField isStretchWithOverflow="true" isBlankWhenNull="true">
+			<textField isStretchWithOverflow="true" pattern="#,##0.00" isBlankWhenNull="true">
 				<reportElement style="TextDetail" x="320" y="354" width="80" height="16" uuid="244f8561-3ef2-45f4-9e2b-38b858758297"/>
 				<textElement textAlignment="Right" verticalAlignment="Bottom"/>
 				<textFieldExpression><![CDATA[$P{extraAmt}]]></textFieldExpression>
 			</textField>
 			<textField>
 				<reportElement style="TextDetail" x="400" y="354" width="25" height="16" uuid="c0665a0f-77f2-4207-832f-4046f0e6b59a"/>
-				<textElement textAlignment="Left" verticalAlignment="Bottom"/>
+				<textElement textAlignment="Right" verticalAlignment="Bottom"/>
 				<textFieldExpression><![CDATA["บาท"]]></textFieldExpression>
 			</textField>
 			<textField>
@@ -450,14 +450,14 @@ new SimpleDateFormat("d/M/yyyy",new Locale("th", "TH")).format($P{auditDateEnd})
 				<textElement textAlignment="Left" verticalAlignment="Bottom"/>
 				<textFieldExpression><![CDATA["รวม"]]></textFieldExpression>
 			</textField>
-			<textField isStretchWithOverflow="true" isBlankWhenNull="true">
+			<textField isStretchWithOverflow="true" pattern="#,##0.00" isBlankWhenNull="true">
 				<reportElement style="TextDetail" x="320" y="370" width="80" height="16" uuid="d17f2d45-df8b-4a83-ae40-cc8eb8ba1ae1"/>
 				<textElement textAlignment="Right" verticalAlignment="Bottom"/>
 				<textFieldExpression><![CDATA[$P{exciseTaxAmt}]]></textFieldExpression>
 			</textField>
 			<textField>
 				<reportElement style="TextDetail" x="400" y="370" width="25" height="16" uuid="3e8191d2-7329-4b2f-84fb-9ae7f6a7b1f3"/>
-				<textElement textAlignment="Left" verticalAlignment="Bottom"/>
+				<textElement textAlignment="Right" verticalAlignment="Bottom"/>
 				<textFieldExpression><![CDATA["บาท"]]></textFieldExpression>
 			</textField>
 			<textField>
@@ -465,14 +465,14 @@ new SimpleDateFormat("d/M/yyyy",new Locale("th", "TH")).format($P{auditDateEnd})
 				<textElement textAlignment="Left" verticalAlignment="Bottom"/>
 				<textFieldExpression><![CDATA["ภาษีเพื่อราชการส่วนท้องถิ่น ตามมาตรา ๑๕๐"]]></textFieldExpression>
 			</textField>
-			<textField isStretchWithOverflow="true" isBlankWhenNull="true">
+			<textField isStretchWithOverflow="true" pattern="#,##0.00" isBlankWhenNull="true">
 				<reportElement style="TextDetail" x="320" y="386" width="80" height="16" uuid="42ad73a8-aa84-47bc-9baa-2b75b5180d44"/>
 				<textElement textAlignment="Right" verticalAlignment="Bottom"/>
 				<textFieldExpression><![CDATA[$P{moiAmt}]]></textFieldExpression>
 			</textField>
 			<textField>
 				<reportElement style="TextDetail" x="400" y="386" width="25" height="16" uuid="49e6c44b-a830-41bb-95dd-f1e9877173e3"/>
-				<textElement textAlignment="Left" verticalAlignment="Bottom"/>
+				<textElement textAlignment="Right" verticalAlignment="Bottom"/>
 				<textFieldExpression><![CDATA["บาท"]]></textFieldExpression>
 			</textField>
 			<textField>
@@ -480,14 +480,14 @@ new SimpleDateFormat("d/M/yyyy",new Locale("th", "TH")).format($P{auditDateEnd})
 				<textElement textAlignment="Left" verticalAlignment="Bottom"/>
 				<textFieldExpression><![CDATA["รวมทั้งสิ้น"]]></textFieldExpression>
 			</textField>
-			<textField isStretchWithOverflow="true" isBlankWhenNull="true">
+			<textField isStretchWithOverflow="true" pattern="#,##0.00" isBlankWhenNull="true">
 				<reportElement style="TextDetail" x="320" y="402" width="80" height="16" uuid="8057c875-0280-47f5-8bdd-3f77a14cfd84"/>
 				<textElement textAlignment="Right" verticalAlignment="Bottom"/>
 				<textFieldExpression><![CDATA[$P{sumAllTaxAmt}]]></textFieldExpression>
 			</textField>
 			<textField>
 				<reportElement style="TextDetail" x="400" y="402" width="25" height="16" uuid="dd80d4ea-eea3-4fed-9eaf-546e2fe15c1f"/>
-				<textElement textAlignment="Left" verticalAlignment="Bottom"/>
+				<textElement textAlignment="Right" verticalAlignment="Bottom"/>
 				<textFieldExpression><![CDATA["บาท"]]></textFieldExpression>
 			</textField>
 			<textField>
@@ -630,6 +630,228 @@ new SimpleDateFormat("d/M/yyyy",new Locale("th", "TH")).format($P{auditDateEnd})
 				<textElement textAlignment="Left" verticalAlignment="Bottom"/>
 				<textFieldExpression><![CDATA[$P{headOfficerFullName}]]></textFieldExpression>
 			</textField>
+			<line>
+				<reportElement x="10" y="101" width="60" height="1" uuid="8b9db0b1-e79a-4e5f-9b72-d286a5d789f4"/>
+				<graphicElement>
+					<pen lineWidth="0.5" lineStyle="Dotted"/>
+				</graphicElement>
+			</line>
+			<line>
+				<reportElement x="76" y="101" width="60" height="1" uuid="3c429428-e6f6-4595-96c7-0f0a60e8a2f4"/>
+				<graphicElement>
+					<pen lineWidth="0.5" lineStyle="Dotted"/>
+				</graphicElement>
+			</line>
+			<line>
+				<reportElement x="260" y="101" width="200" height="1" uuid="b0ab2bb4-22ce-4107-9ff6-cdc6c0efba3f"/>
+				<graphicElement>
+					<pen lineWidth="0.5" lineStyle="Dotted"/>
+				</graphicElement>
+			</line>
+			<line>
+				<reportElement x="290" y="117" width="20" height="1" uuid="74f025b9-909c-481f-8f7a-afb914235e0e"/>
+				<graphicElement>
+					<pen lineWidth="0.5" lineStyle="Dotted"/>
+				</graphicElement>
+			</line>
+			<line>
+				<reportElement x="335" y="117" width="60" height="1" uuid="90efbf53-6d08-42de-b0f8-fe03e65bece2"/>
+				<graphicElement>
+					<pen lineWidth="0.5" lineStyle="Dotted"/>
+				</graphicElement>
+			</line>
+			<line>
+				<reportElement x="420" y="117" width="40" height="1" uuid="28e729a2-5a72-4f97-adeb-3d3586ad909f"/>
+				<graphicElement>
+					<pen lineWidth="0.5" lineStyle="Dotted"/>
+				</graphicElement>
+			</line>
+			<line>
+				<reportElement x="20" y="141" width="200" height="1" uuid="9456e843-310a-438a-a4b4-d18ab7af1ca6"/>
+				<graphicElement>
+					<pen lineWidth="0.5" lineStyle="Dotted"/>
+				</graphicElement>
+			</line>
+			<line>
+				<reportElement x="85" y="173" width="100" height="1" uuid="ec5456f8-a294-41d6-b58a-b8064d81c112"/>
+				<graphicElement>
+					<pen lineWidth="0.5" lineStyle="Dotted"/>
+				</graphicElement>
+			</line>
+			<line>
+				<reportElement x="40" y="189" width="30" height="1" uuid="c69ab811-5930-450a-80fb-364d2435caac"/>
+				<graphicElement>
+					<pen lineWidth="0.5" lineStyle="Dotted"/>
+				</graphicElement>
+			</line>
+			<line>
+				<reportElement x="90" y="189" width="25" height="1" uuid="bd507cc2-db49-4218-a03d-bc12aff1ffab"/>
+				<graphicElement>
+					<pen lineWidth="0.5" lineStyle="Dotted"/>
+				</graphicElement>
+			</line>
+			<line>
+				<reportElement x="155" y="189" width="125" height="1" uuid="7c4e912e-9502-4a30-9a63-342304b359ce"/>
+				<graphicElement>
+					<pen lineWidth="0.5" lineStyle="Dotted"/>
+				</graphicElement>
+			</line>
+			<line>
+				<reportElement x="300" y="189" width="160" height="1" uuid="b97cb5e4-873e-4562-b790-78108fe7c299"/>
+				<graphicElement>
+					<pen lineWidth="0.5" lineStyle="Dotted"/>
+				</graphicElement>
+			</line>
+			<line>
+				<reportElement x="45" y="205" width="90" height="1" uuid="cff2c62d-dfcf-4f36-a490-b6cb0db5f671"/>
+				<graphicElement>
+					<pen lineWidth="0.5" lineStyle="Dotted"/>
+				</graphicElement>
+			</line>
+			<line>
+				<reportElement x="180" y="205" width="90" height="1" uuid="ba023f00-6e1c-4d17-a40f-b44b684dab04"/>
+				<graphicElement>
+					<pen lineWidth="0.5" lineStyle="Dotted"/>
+				</graphicElement>
+			</line>
+			<line>
+				<reportElement x="295" y="205" width="90" height="1" uuid="6fb472f3-e158-4d69-bd06-9e85fc70c382"/>
+				<graphicElement>
+					<pen lineWidth="0.5" lineStyle="Dotted"/>
+				</graphicElement>
+			</line>
+			<line>
+				<reportElement x="430" y="205" width="30" height="1" uuid="dd05d3a5-2600-4b02-815b-d1e7f029492b"/>
+				<graphicElement>
+					<pen lineWidth="0.5" lineStyle="Dotted"/>
+				</graphicElement>
+			</line>
+			<line>
+				<reportElement x="190" y="221" width="40" height="1" uuid="e4a66e30-89e7-489f-90e6-823875b3f8d2"/>
+				<graphicElement>
+					<pen lineWidth="0.5" lineStyle="Dotted"/>
+				</graphicElement>
+			</line>
+			<line>
+				<reportElement x="236" y="221" width="40" height="1" uuid="6f89ddcf-0ae3-4ed6-beac-76131e1d2272"/>
+				<graphicElement>
+					<pen lineWidth="0.5" lineStyle="Dotted"/>
+				</graphicElement>
+			</line>
+			<line>
+				<reportElement x="305" y="221" width="20" height="1" uuid="0ca7fe5c-a776-4c41-b50a-5133b55df36c"/>
+				<graphicElement>
+					<pen lineWidth="0.5" lineStyle="Dotted"/>
+				</graphicElement>
+			</line>
+			<line>
+				<reportElement x="350" y="221" width="60" height="1" uuid="20bfa600-c0e6-4bd4-8131-6a7e5c3f2b6c"/>
+				<graphicElement>
+					<pen lineWidth="0.5" lineStyle="Dotted"/>
+				</graphicElement>
+			</line>
+			<line>
+				<reportElement x="430" y="221" width="30" height="1" uuid="9ae72d1f-9948-4a66-8d9f-268b204bb18e"/>
+				<graphicElement>
+					<pen lineWidth="0.5" lineStyle="Dotted"/>
+				</graphicElement>
+			</line>
+			<line>
+				<reportElement x="130" y="237" width="150" height="1" uuid="aabcacdd-5285-42a8-9f68-33b7c67d6e40"/>
+				<graphicElement>
+					<pen lineWidth="0.5" lineStyle="Dotted"/>
+				</graphicElement>
+			</line>
+			<line>
+				<reportElement x="220" y="253" width="240" height="1" uuid="36499acc-6c6c-461e-b27d-51612bf45f3d"/>
+				<graphicElement>
+					<pen lineWidth="0.5" lineStyle="Dotted"/>
+				</graphicElement>
+			</line>
+			<line>
+				<reportElement x="0" y="269" width="460" height="1" uuid="15f7350b-4fae-4b10-a0f8-06ab98875266"/>
+				<graphicElement>
+					<pen lineWidth="0.5" lineStyle="Dotted"/>
+				</graphicElement>
+			</line>
+			<line>
+				<reportElement x="95" y="285" width="365" height="1" uuid="e2fa8368-9590-421c-a2a8-a97f9d4da113"/>
+				<graphicElement>
+					<pen lineWidth="0.5" lineStyle="Dotted"/>
+				</graphicElement>
+			</line>
+			<line>
+				<reportElement x="0" y="301" width="460" height="1" uuid="e48adcd6-5b07-4018-abad-91f45856da7f"/>
+				<graphicElement>
+					<pen lineWidth="0.5" lineStyle="Dotted"/>
+				</graphicElement>
+			</line>
+			<line>
+				<reportElement x="135" y="317" width="165" height="1" uuid="15c4cfb8-3b6e-4542-89a7-2f03c89f5fde"/>
+				<graphicElement>
+					<pen lineWidth="0.5" lineStyle="Dotted"/>
+				</graphicElement>
+			</line>
+			<line>
+				<reportElement x="320" y="333" width="80" height="1" uuid="bb02646b-722c-4efd-b3fc-51bcbc752eb0"/>
+				<graphicElement>
+					<pen lineWidth="0.5" lineStyle="Dotted"/>
+				</graphicElement>
+			</line>
+			<line>
+				<reportElement x="320" y="349" width="80" height="1" uuid="f96f1ff1-4fa5-4562-bfa5-90da61bd31c5"/>
+				<graphicElement>
+					<pen lineWidth="0.5" lineStyle="Dotted"/>
+				</graphicElement>
+			</line>
+			<line>
+				<reportElement x="320" y="365" width="80" height="1" uuid="d1cd2f06-0645-417d-bacd-a53c26dd068a"/>
+				<graphicElement>
+					<pen lineWidth="0.5" lineStyle="Dotted"/>
+				</graphicElement>
+			</line>
+			<line>
+				<reportElement x="320" y="381" width="80" height="1" uuid="d1e163e4-9519-4e65-a954-87e0f9baf7a2"/>
+				<graphicElement>
+					<pen lineWidth="0.5" lineStyle="Dotted"/>
+				</graphicElement>
+			</line>
+			<line>
+				<reportElement x="320" y="397" width="80" height="1" uuid="31423f7a-86ca-4dab-8840-f4c045483be1"/>
+				<graphicElement>
+					<pen lineWidth="0.5" lineStyle="Dotted"/>
+				</graphicElement>
+			</line>
+			<line>
+				<reportElement x="320" y="413" width="80" height="1" uuid="6665eb9b-ddec-4016-93c5-91245568123d"/>
+				<graphicElement>
+					<pen lineWidth="0.5" lineStyle="Dotted"/>
+				</graphicElement>
+			</line>
+			<line>
+				<reportElement x="140" y="429" width="150" height="1" uuid="7c97f178-8984-40ee-a600-8b32f94db028"/>
+				<graphicElement>
+					<pen lineWidth="0.5" lineStyle="Dotted"/>
+				</graphicElement>
+			</line>
+			<line>
+				<reportElement x="10" y="493" width="230" height="1" uuid="9e8e13d2-7400-45b5-b240-bf8a87fef5ab"/>
+				<graphicElement>
+					<pen lineWidth="0.5" lineStyle="Dotted"/>
+				</graphicElement>
+			</line>
+			<line>
+				<reportElement x="280" y="493" width="90" height="1" uuid="95501c0b-d995-4af1-b881-2523e701e40e"/>
+				<graphicElement>
+					<pen lineWidth="0.5" lineStyle="Dotted"/>
+				</graphicElement>
+			</line>
+			<line>
+				<reportElement x="390" y="493" width="30" height="1" uuid="9a4888b6-8682-4608-8efa-49e374bc54ea"/>
+				<graphicElement>
+					<pen lineWidth="0.5" lineStyle="Dotted"/>
+				</graphicElement>
+			</line>
 			<line>
 				<reportElement positionType="Float" x="250" y="601" width="120" height="1" uuid="90cc8d6e-effc-44c7-a7db-a302cb74d0d5"/>
 				<graphicElement>
