--- a/workspace/ims-webapp/src/main/resources/reports/jrxml/TA_FORM_TS01_20.jrxml
+++ b/workspace/ims-webapp/src/main/resources/reports/jrxml/TA_FORM_TS01_20.jrxml
@@ -24,8 +24,7 @@
 	<parameter name="facProvinceName" class="java.lang.String"/>
 	<parameter name="facZipCode" class="java.lang.String"/>
 	<parameter name="expandReason" class="java.lang.String"/>
-	<parameter name="expandFlag1" class="java.lang.String"/>
-	<parameter name="expandFlag2" class="java.lang.String"/>
+	<parameter name="expandFlag" class="java.lang.String"/>
 	<parameter name="expandNo" class="java.lang.String"/>
 	<parameter name="expandDateOld" class="java.util.Date"/>
 	<parameter name="expandDateNew" class="java.util.Date"/>
@@ -250,7 +249,7 @@ new SimpleDateFormat("d/M/yyyy",new Locale("th", "TH")).format($P{auditDateEnd})
 				<textElement verticalAlignment="Middle">
 					<font fontName="DejaVu Sans" size="16"/>
 				</textElement>
-				<textFieldExpression><![CDATA["1".equals( $P{expandFlag1} )?"\u2611" : "\u2610"]]></textFieldExpression>
+				<textFieldExpression><![CDATA["1".equals( $P{expandFlag} )?"\u2611" : "\u2610"]]></textFieldExpression>
 			</textField>
 			<textField>
 				<reportElement style="TextDetail" x="25" y="371" width="290" height="22" uuid="275cb904-078e-4640-bcc2-80919887c228"/>
@@ -262,7 +261,7 @@ new SimpleDateFormat("d/M/yyyy",new Locale("th", "TH")).format($P{auditDateEnd})
 				<textElement verticalAlignment="Middle">
 					<font fontName="DejaVu Sans" size="16"/>
 				</textElement>
-				<textFieldExpression><![CDATA["1".equals( $P{expandFlag2} )?"\u2611" : "\u2610"]]></textFieldExpression>
+				<textFieldExpression><![CDATA["2".equals( $P{expandFlag} )?"\u2611" : "\u2610"]]></textFieldExpression>
 			</textField>
 			<textField>
 				<reportElement style="TextDetail" x="25" y="393" width="288" height="22" uuid="b72bf21f-0367-43d8-8c54-a0bc507b3c03"/>
