--- a/workspace/ims-webapp/src/main/resources/reports/jrxml/TA_FORM_TS01_16.jrxml
+++ b/workspace/ims-webapp/src/main/resources/reports/jrxml/TA_FORM_TS01_16.jrxml
@@ -13,15 +13,18 @@
 	<parameter name="factoryType" class="java.lang.String"/>
 	<parameter name="newRegId" class="java.lang.String"/>
 	<parameter name="requestDate" class="java.util.Date"/>
-	<parameter name="requestType" class="java.lang.String"/>
+	<parameter name="requestTypeExcept" class="java.lang.String"/>
+	<parameter name="requestTypeReduce" class="java.lang.String"/>
+	<parameter name="requestTypeFineAmt" class="java.lang.String"/>
+	<parameter name="requestTypeExtraAmt" class="java.lang.String"/>
 	<parameter name="requestReason" class="java.lang.String"/>
 	<parameter name="requestDesc" class="java.lang.String"/>
 	<parameter name="fineNoFlag" class="java.lang.String"/>
-	<parameter name="fineRefrainFlag" class="java.lang.String"/>
-	<parameter name="findReduceFlag" class="java.lang.String"/>
+	<parameter name="fineExceptAmtFlag" class="java.lang.String"/>
+	<parameter name="fineReduceAmtFlag" class="java.lang.String"/>
 	<parameter name="finePercent" class="java.math.BigDecimal"/>
 	<parameter name="extraNoFlag" class="java.lang.String"/>
-	<parameter name="extraReduceFlag" class="java.lang.String"/>
+	<parameter name="extraReduceAmtFlag" class="java.lang.String"/>
 	<parameter name="extraPercent" class="java.math.BigDecimal"/>
 	<parameter name="beforeTaxAmt" class="java.math.BigDecimal"/>
 	<parameter name="beforeFinePercent" class="java.math.BigDecimal"/>
@@ -211,7 +214,7 @@
 				<textElement verticalAlignment="Bottom">
 					<font fontName="DejaVu Sans" size="16"/>
 				</textElement>
-				<textFieldExpression><![CDATA["1".equals( $P{requestType} )?"\u2611" : "\u2610"]]></textFieldExpression>
+				<textFieldExpression><![CDATA["Y".equals( $P{requestTypeExcept} )?"\u2611" : "\u2610"]]></textFieldExpression>
 			</textField>
 			<textField>
 				<reportElement style="TextDetail" x="22" y="200" width="38" height="18" uuid="49bbd03b-1a54-49d8-8ae8-ab444f73aaaf"/>
@@ -223,7 +226,7 @@
 				<textElement verticalAlignment="Bottom">
 					<font fontName="DejaVu Sans" size="16"/>
 				</textElement>
-				<textFieldExpression><![CDATA["2".equals( $P{requestType} )?"\u2611" : "\u2610"]]></textFieldExpression>
+				<textFieldExpression><![CDATA["Y".equals( $P{requestTypeReduce} )?"\u2611" : "\u2610"]]></textFieldExpression>
 			</textField>
 			<textField>
 				<reportElement style="TextDetail" x="112" y="200" width="36" height="18" uuid="e8b88212-7031-4668-ab9f-28248d61ecb6"/>
@@ -235,7 +238,7 @@
 				<textElement verticalAlignment="Bottom">
 					<font fontName="DejaVu Sans" size="16"/>
 				</textElement>
-				<textFieldExpression><![CDATA["3".equals( $P{requestType} )?"\u2611" : "\u2610"]]></textFieldExpression>
+				<textFieldExpression><![CDATA["Y".equals( $P{requestTypeFineAmt} )?"\u2611" : "\u2610"]]></textFieldExpression>
 			</textField>
 			<textField>
 				<reportElement style="TextDetail" x="202" y="200" width="38" height="18" uuid="c8934643-f900-4581-8107-906ef936959c"/>
@@ -247,7 +250,7 @@
 				<textElement verticalAlignment="Bottom">
 					<font fontName="DejaVu Sans" size="16"/>
 				</textElement>
-				<textFieldExpression><![CDATA["4".equals( $P{requestType} )?"\u2611" : "\u2610"]]></textFieldExpression>
+				<textFieldExpression><![CDATA["Y".equals( $P{requestTypeExtraAmt} )?"\u2611" : "\u2610"]]></textFieldExpression>
 			</textField>
 			<textField>
 				<reportElement style="TextDetail" x="292" y="200" width="41" height="18" uuid="d0f5dcfe-7f8d-47a8-9f63-7c09f4a1de1f"/>
@@ -290,7 +293,7 @@
 				<textElement verticalAlignment="Bottom">
 					<font fontName="DejaVu Sans" size="16"/>
 				</textElement>
-				<textFieldExpression><![CDATA["1".equals( $P{fineNoFlag} )?"\u2611" : "\u2610"]]></textFieldExpression>
+				<textFieldExpression><![CDATA["Y".equals( $P{fineNoFlag} )?"\u2611" : "\u2610"]]></textFieldExpression>
 			</textField>
 			<textField>
 				<reportElement style="TextDetail" x="20" y="324" width="18" height="18" uuid="1c692f62-3547-449c-b038-d7989128656c"/>
@@ -302,7 +305,7 @@
 				<textElement verticalAlignment="Bottom">
 					<font fontName="DejaVu Sans" size="16"/>
 				</textElement>
-				<textFieldExpression><![CDATA["1".equals( $P{fineRefrainFlag} )?"\u2611" : "\u2610"]]></textFieldExpression>
+				<textFieldExpression><![CDATA["Y".equals( $P{fineExceptAmtFlag} )?"\u2611" : "\u2610"]]></textFieldExpression>
 			</textField>
 			<textField>
 				<reportElement style="TextDetail" x="65" y="324" width="18" height="18" uuid="dbeefbdc-1fcc-476c-aa6a-fa79350c8004"/>
@@ -314,7 +317,7 @@
 				<textElement verticalAlignment="Bottom">
 					<font fontName="DejaVu Sans" size="16"/>
 				</textElement>
-				<textFieldExpression><![CDATA["2".equals( $P{findReduceFlag} )?"\u2611" : "\u2610"]]></textFieldExpression>
+				<textFieldExpression><![CDATA["Y".equals( $P{fineReduceAmtFlag} )?"\u2611" : "\u2610"]]></textFieldExpression>
 			</textField>
 			<textField>
 				<reportElement style="TextDetail" x="110" y="324" width="18" height="18" uuid="ad31b408-ed75-4412-a321-25097f361543"/>
@@ -344,7 +347,7 @@
 				<textElement verticalAlignment="Bottom">
 					<font fontName="DejaVu Sans" size="16"/>
 				</textElement>
-				<textFieldExpression><![CDATA["1".equals( $P{extraNoFlag} )?"\u2611" : "\u2610"]]></textFieldExpression>
+				<textFieldExpression><![CDATA["Y".equals( $P{extraNoFlag} )?"\u2611" : "\u2610"]]></textFieldExpression>
 			</textField>
 			<textField>
 				<reportElement style="TextDetail" x="20" y="342" width="18" height="18" uuid="104598ca-9434-4a47-991e-2ecbdc5609ee"/>
@@ -356,7 +359,7 @@
 				<textElement verticalAlignment="Bottom">
 					<font fontName="DejaVu Sans" size="16"/>
 				</textElement>
-				<textFieldExpression><![CDATA["1".equals( $P{extraReduceFlag} )?"\u2611" : "\u2610"]]></textFieldExpression>
+				<textFieldExpression><![CDATA["Y".equals( $P{extraReduceAmtFlag} )?"\u2611" : "\u2610"]]></textFieldExpression>
 			</textField>
 			<textField>
 				<reportElement style="TextDetail" x="110" y="342" width="18" height="18" uuid="96d26a87-ccdc-4c58-8204-14f18310b14a"/>
