--- a/workspace/ims-webapp/src/main/resources/reports/jrxml/TA_FORM_TS01_14_2.jrxml
+++ b/workspace/ims-webapp/src/main/resources/reports/jrxml/TA_FORM_TS01_14_2.jrxml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!-- Created with Jaspersoft Studio version 6.5.1.final using JasperReports Library version 6.5.1  -->
-<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="TA_FORM_TS01_14_2" pageWidth="842" pageHeight="595" orientation="Landscape" whenNoDataType="AllSectionsNoDetail" columnWidth="800" leftMargin="20" rightMargin="22" topMargin="20" bottomMargin="20" uuid="5e1b95b0-8d12-422e-9432-dad4f5809b33">
+<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="TA_FORM_TS01_14_2" pageWidth="842" pageHeight="595" orientation="Landscape" whenNoDataType="AllSectionsNoDetail" columnWidth="800" leftMargin="20" rightMargin="22" topMargin="20" bottomMargin="20" isIgnorePagination="true" uuid="5e1b95b0-8d12-422e-9432-dad4f5809b33">
 	<property name="com.jaspersoft.studio.data.defaultdataadapter" value="One Empty Record"/>
 	<property name="com.jaspersoft.studio.unit." value="pixel"/>
 	<property name="com.jaspersoft.studio.report.description" value=""/>
@@ -435,7 +435,7 @@
 		</band>
 	</detail>
 	<summary>
-		<band height="110">
+		<band height="110" splitType="Stretch">
 			<textField>
 				<reportElement style="TextDetail" x="0" y="10" width="126" height="20" uuid="4a3f25ca-567e-448d-a0dc-7a91e655c4f0"/>
 				<textElement textAlignment="Left" verticalAlignment="Bottom"/>
